--- a/HTML-PC/css/scss/_reset.scss
+++ b/HTML-PC/css/scss/_reset.scss
@@ -94,6 +94,10 @@ img {
     vertical-align: middle;
 }
 
+.Images img {
+    width: 100%;
+}
+
 a {
     color: #00234B;
     text-decoration: none;
