--- a/HTML-PC/css/scss/_responsive.scss
+++ b/HTML-PC/css/scss/_responsive.scss
@@ -2,7 +2,7 @@
     display: none;
 }
 
-@media (min-width: 1366px) {
+@media (min-width: 1340px) {
     .container {
         max-width: 1310px;
     }
@@ -14,7 +14,7 @@
     }
 }
 
-@media (max-width: 1310px) {
+@media (max-width: 1339px) {
     .mb80 {
         margin-bottom: 50px;
     }
@@ -85,7 +85,10 @@
     }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575px) {
+    .xs-mt0{
+        margin-top: 0!important;
+    }
     .hidden-mb {
         display: none;
     }
