--- a/HTML-PC/css/scss/_element.scss
+++ b/HTML-PC/css/scss/_element.scss
@@ -1461,6 +1461,10 @@ body.open-ctv {
 
 .col-right {
     width: 100%;
+    width: calc(100% - 396px);
+    @media (max-width: 991px) {
+        width: 100%;
+    }
 }
 
 .order1 {
@@ -1896,7 +1900,7 @@ body.open-ctv {
 .list-article {
     .article-itemt {
         border-radius: 8px;
-        box-shadow: 0px 2px 24px 0px rgba(123, 156, 164, 0.16);
+        box-shadow: 0px 2px 8px 0px rgba(123, 156, 164, 0.16);
         .article-thumb {
             margin-bottom: 0;
             .thumb_img {
@@ -1916,7 +1920,17 @@ body.open-ctv {
         }
     }
 }
-
+.slide-article{
+    margin: -8px;
+    .swiper-slide{
+        padding: 8px;
+    }
+    @media (max-width: 575px) {
+        .page{
+            display: none;
+        }
+    }
+}
 .list-article-small {
     .article-itemt {
         &:last-child {
