--- a/HTML-PC/app/template/main.html
+++ b/HTML-PC/app/template/main.html
@@ -38,7 +38,7 @@
                         <div class="main-menu">
                             <ul class="nav">
                                 <li class="logo">
-                                    <a title="new-ca" href="#">
+                                    <a title="new-ca" href="home.html">
                                         <picture class="logo-dark">
                                             <source media="(min-width:650px)" srcset="images/graphics/logo.png">
                                             <img src="images/graphics/m_logo.png" alt="">
